--- a/map.css
+++ b/map.css
@@ -1,12 +1,20 @@
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
+    z-index: -5;
 }
+
+#container {
+    z-index: -5;
+}
+
 svg#map{ 
-	float: left;
-	/*position: absolute;*/
-	height: 750px; 
-	width: 650px;
+    position: absolute;
+    top: 100px;
+	height: 600px; 
+	width: 500px;
     z-index: -1;
+    border: 2px solid grey;
+    border-radius: 12px
 }
 
 #map path { 
@@ -19,22 +27,30 @@ svg#map{
 }
 
 svg#pie{
-	position: relative;
-    right: 20px;
-    bottom: 350px;
-	width: 250px;
-	height: 250px;
+	position: absolute;
+    right: 200px;
+    bottom: 300px;
+	width: 310px;
+	height: 310px;
 	border: 3px;
     z-index: -1;
+    border: 2px solid grey;
+    border-radius: 12px
 }
 
 #pie path:hover {
-    fill: red;
+    /*fill: red;*/
 }
+
+/*g.arc:hover {
+    opacity: 0.5;
+    stroke: grey;
+    stroke-width: 3;
+}*/
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #000;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -44,7 +60,7 @@ svg#pie{
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color: grey;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -58,21 +74,21 @@ svg#pie{
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: black;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.8);
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color: grey}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
@@ -96,28 +112,77 @@ svg#pie{
     overflow-y:scroll; 
 }
 svg#plot {
-    position: relative;
-    top: 330px;
-    right: 150px;
-    z-index: -1;
+    position: absolute;
+    top: 430px;
+    right: 0px;
+    width: 550px;
+    z-index: +1;
+    border: 2px solid grey;
+    border-radius: 12px
 }
 #pietitle {
     text-align: center;
-    position: relative;
-    bottom: 330px;
-    right: 260px;
+    position: absolute;
+    bottom: 430px;
+    right: 250px;
     z-index: 1;
+    border: 2px solid grey;
+    border-radius: 12px
 }
 #maintitle {
+    width: 600px;
     text-align: left;
-    position: relative;
-    bottom: 340px;
-    right: 400px;
-    z-index: 1;    
+    position: absolute;
+    bottom: 595px;
+    right: 290px;
+    z-index: +6;    
+    border: 2px solid grey;
+    border-radius: 12px
 }
 #plottitle {
     text-align: left;
     position: absolute;
-    bottom: 250px;  
-    left: 600px;
+    bottom: 220px;  
+    left: 670px;
+    border: 2px solid grey;
+    border-radius: 12px
+}
+
+#timeSlider {
+    z-index: +4;
+    border: 2px solid grey;
+    border-radius: 12px
+}
+.slider {
+  position: absolute;
+  top: 80px;
+  left: 22px;
+}
+
+.slider-tray {
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  border: solid 1px #ccc;
+  border-top-color: #aaa;
+  border-radius: 4px;
+  background-color: #f0f0f0;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
+}
+
+.slider-handle {
+  position: absolute;
+  top: 3px;
+}
+
+.slider-handle-icon {
+  width: 14px;
+  height: 14px;
+  border: solid 1px #aaa;
+  position: absolute;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  top: -7px;
+  left: -7px;
 }
