--- a/clean.css
+++ b/clean.css
@@ -14,6 +14,12 @@ body {
 #mapTitle {
 }
 
+#pieTitle {
+    position: absolute;
+    bottom: 20px;
+    width: 400px
+}
+
 svg#map {
 	width: 500px;
 	height: 630px;
@@ -21,27 +27,39 @@ svg#map {
     border-radius: 12px;
     z-index: -1;
 }
+#map .land:hover {
+    opacity: 0.5;
+}
 
 
 #pieContainer {
-	width: 250px;
+	width: 500px;
 	height: 250px;
 	border: 2px solid grey;
     border-radius: 12px;
     position: absolute;
-    bottom: 350px;
-    left: 600px;
+    bottom: 300px;
+    left: 550px;
+}
+svg#pie {
+    position: absolute;
+    left: 100px;
+    bottom: 10px;
 }
 
 
 #plotContainer {
-	width: 510px;
+	width: 500px;
 	height: 300px;
 	border: 2px solid grey;
     border-radius: 12px;
     position: absolute;
-    bottom: 30px;
+    bottom: -83px;
     left: 550px;
+}
+svg#plot {
+    position: absolute;
+    top:30px;
 }
 #plot path { 
     stroke: steelblue;
@@ -108,4 +126,11 @@ svg#map {
 #crimeDrop { 
     max-height:180px; 
     overflow-y:scroll; 
+}
+
+#slidercontainer {
+    position: absolute;
+    z-index: +3;
+    bottom: 560px;
+    left: 130px;
 }
