--- a/clean.css
+++ b/clean.css
@@ -5,7 +5,9 @@ body {
 
 #mainContainer {
     /*border: 2px solid white;*/
-    border-radius: 12px
+    border-radius: 12px;
+    /*position: absolute;*/
+    /*float: center;*/
 }
 #maintitle{
     z-index: -5;
@@ -13,6 +15,8 @@ body {
 
 #mapContainer {
     position: absolute;
+    top: 50px;
+    left: 50px;
     /*border: 2px solid white;*/
     border-radius: 12px}
 
@@ -26,15 +30,26 @@ body {
     width: 400px;
     z-index: -3;
 }
+#percentage {
+    width: 90px;
+    position: absolute;
+    left: 100px;
+    top: 65px;
+    text-align: center;
+    font-size: 75px;
+    color: white;
+    opacity: 0.3;
+    font-weight: bold;
+}
 
 svg#map {
-	width: 500px;
+	width: 400px;
 	height: 630px;
     position: absolute;
     top: 0px;
     /*border: 2px solid white;*/
     border-radius: 12px;
-    z-index: -1;
+    z-index: +1;
 }
 #map .land:hover {
     /*fill: yellow;*/
@@ -45,6 +60,10 @@ svg#map {
     stroke: grey;
     /*stroke-width: 3;*/
 }
+#map .land:hover{
+    stroke: steelblue;
+    stroke-width: 3;
+}
 
 
 #pieContainer {
@@ -54,7 +73,7 @@ svg#map {
     border-radius: 12px;
     position: absolute;
     bottom: 300px;
-    left: 550px;
+    left: 700px;
     z-index: -3;
 }
 svg#pie {
@@ -63,7 +82,10 @@ svg#pie {
     position: absolute;
     right: 50px;
     bottom: -70px;
-    z-index: -2;
+    z-index: +1;
+}
+#pie path{
+    z-index: +5;
 }
 
 .crime-label:hover {
@@ -82,36 +104,38 @@ svg#pie {
 	/*border: 2px solid white;*/
     border-radius: 12px;
     position: absolute;
-    bottom: -83px;
-    left: 550px;
+    bottom: 0px;
+    left: 400px;
 }
 #plottitle {
     position: absolute;
-    left: 365px;
-    top: 60px;
-    font-size: 50px;
+    left: 110px;
+    top: -180px;
+    font-size: 80px;
     color: white;
     opacity: 0.3;
     text-align: right;
     /*text-shadow: 3px 10px red;*/
 }
 #plotsubtitle{
+    width: 380px;
     position: absolute;
-    width: 500px;
-    right: 80px;
-    top: 140px;
-    font-size: 20px;
+    left: -38px;
+    top: -60px;
+    font-size: 40px;
     color: white;
-    opacity: 0.3;
-    text-align: right;   
+    opacity: 0.7;
+    text-align: center;   
 }
 svg#plot {
     /*border: 2px solid white;*/
+    height: 200px;
+    width: 400px;
     background: grey;
     border-radius: 25px;
     position: absolute;
-    top:-60px;
-    right: 50px;
+    top:80px;
+    right: 150px;
 }
 #plot path { 
     stroke: lightblue;
@@ -190,7 +214,26 @@ svg#plot {
 
 #slidercontainer {
     position: absolute;
-    z-index: +3;
-    bottom: 580px;
-    left: 130px;
+    z-index: -1;
+    bottom: 400px;
+    left: 350px;
+}
+svg#slider {
+    /*width: 350px;*/
+    position: absolute;
+    bottom: 0px;
+    left: 100px;
+    z-index: -5;
+}
+#slidertitle{
+    position: absolute;
+    left: 150px;
+    bottom: -15px;
+    text-align: center;
+    font-size: 50px;
+    color: white;
+    opacity: 0.3;
+}
+.dropbtn {
+    border-radius: 2px;
 }
