--- a/clean.css
+++ b/clean.css
@@ -3,11 +3,20 @@ body {
     font-family: calibri;
 }
 
+#legend {
+    width: 60px;
+    position: absolute;
+    top: 70px;
+    left: 28px;
+}
+.recttxt {
+    color: white;
+    font-size: 12px;
+
+}
+
 #mainContainer {
-    /*border: 2px solid white;*/
     border-radius: 12px;
-    /*position: absolute;*/
-    /*float: center;*/
 }
 #maintitle{
     z-index: -5;
@@ -49,7 +58,7 @@ svg#map {
     top: 0px;
     /*border: 2px solid white;*/
     border-radius: 12px;
-    z-index: +1;
+    z-index: 0;
 }
 #map .land:hover {
     /*fill: yellow;*/
@@ -105,22 +114,22 @@ svg#pie {
     border-radius: 12px;
     position: absolute;
     bottom: 0px;
-    left: 400px;
+    left: 420px;
 }
 #plottitle {
     position: absolute;
-    left: 110px;
+    left: 85px;
     top: -180px;
     font-size: 80px;
     color: white;
     opacity: 0.3;
-    text-align: right;
+    text-align: justify;
     /*text-shadow: 3px 10px red;*/
 }
 #plotsubtitle{
     width: 380px;
     position: absolute;
-    left: -38px;
+    left: -60px;
     top: -60px;
     font-size: 40px;
     color: white;
@@ -130,12 +139,18 @@ svg#pie {
 svg#plot {
     /*border: 2px solid white;*/
     height: 200px;
-    width: 400px;
+    width: 500px;
     background: grey;
     border-radius: 25px;
     position: absolute;
     top:80px;
-    right: 150px;
+    right: 100px;
+}
+#ylabel {
+    color: white;
+    position: absolute;
+    top:180px;
+    left: -135px;
 }
 #plot path { 
     stroke: lightblue;
@@ -164,10 +179,11 @@ svg#plot {
 }
 #home .dropbtn {
     position: absolute;
+    left: 0;
 }
 #crimebtn {
     position: absolute;
-    left: 106px;
+    left: 110px;
     bottom: 0px
 }
 
@@ -178,7 +194,8 @@ svg#plot {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: relative;
+    position: absolute;
+    left: 450px;
     display: inline-block;
     z-index: +5;
 }
@@ -219,7 +236,6 @@ svg#plot {
     left: 350px;
 }
 svg#slider {
-    /*width: 350px;*/
     position: absolute;
     bottom: 0px;
     left: 100px;
@@ -236,4 +252,87 @@ svg#slider {
 }
 .dropbtn {
     border-radius: 2px;
+}
+
+#infoBtn {
+    background: grey;
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    width: 40px;
+    height: 40px;
+}
+#infobtnheader {
+    width: 35px;
+    height: 35px;
+}
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: absolute; /* Stay in place */
+    z-index: +6; /* Sit on top */
+    padding-top: 40px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 10px 16px;
+    background-color: steelblue;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+#sources {
+    font-size: 12px;
+}
+.infoimg {
+    margin: 0px 10px;
 }
